025-fixed-photo-overflow

--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ body {
   background-color: #81a69b;
   background-image: url(http://static.frontendmasters.com/resources/2019-05-02-complete-intro-react-v5/image-background.png);
   margin: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .search-params {
   width: 1100px;
@@ -104,6 +104,9 @@ header {
   width: 1100px;
   margin: 0 auto;
   padding: 20px 0px 0px 0px;
+}
+.details {
+  overflow: hidden;
 }
 .details p {
   line-height: 1.5;
